Fixed a z-index issue

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body
   top: 18em;
   left: 2ex;
   position: inherit;
-  z-index: 1
+  z-index: 2
 }
 
 /*
